web/book/tests/snapshots/snapshot__tests__prql__syntax__expressions-and-operators-0.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from foo\nselect [\n  circumference = diameter * 3.14159,\n  color,\n]\nfilter circumference > 10 && color != \"red\"\n"
---
WITH table_1 AS (
  SELECT
    diameter * 3.14159 AS circumference,
    color
  FROM
    foo
)
SELECT
  circumference,
  color
FROM
  table_1 AS table_0
WHERE
  circumference > 10
  AND color <> 'red'

