web/book/tests/snapshots/snapshot__tests__prql__syntax__precedence-and-parentheses-1.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "# error\n\nfrom employees\nderive total_distance = sum distance\n"
---
Error:
   ╭─[:4:29]
   │
 4 │ derive total_distance = sum distance
   │                             ────┬───
   │                                 ╰───── Unknown name distance
───╯

